welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: value <> is not a member of Int
		while (num(i) <> 0) {
                              ^island:7: error: value += is not a member of Int
			i +=1
                          ^